<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Menu">

    <TextView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:alpha="1"
        android:rotation="180"
        android:background="@drawable/intro_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/skull"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:contentDescription="@string/title"
        android:src="@drawable/skull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="center"
        android:text="@string/the_great_internet_scavenger_hunt"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/menuTitle2"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="center"
        android:rotation="-15"
        android:text="@string/the_great_internet_scavenger_hunt"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/menuTitle3"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="center"
        android:rotation="15"
        android:text="@string/the_great_internet_scavenger_hunt"
        android:textColor="#88744B"
        android:textSize="44sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:alpha="1"
        android:text="@string/go_to_introduction"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menuTitle"
        app:layout_constraintEnd_toStartOf="@+id/introductionGo"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.391" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/introductionGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#80070707"
        app:fabCustomSize="41dp"
        app:layout_constraintBottom_toTopOf="@+id/menuTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="40dp"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/map"
        android:layout_width="174dp"
        android:layout_height="79dp"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/levelsButton"
        android:padding="20dp"
        android:rotation="55"
        android:scaleType="fitCenter"
        android:scaleX="2.5"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        app:srcCompat="@drawable/map" />

    <TextView
        android:id="@+id/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_level_select"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.516" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="174dp"
        android:layout_height="79dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/exit_app"
        android:cropToPadding="true"
        android:padding="20dp"
        android:rotation="90"
        android:scaleType="fitCenter"
        android:scaleX="2"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.61"
        app:srcCompat="@drawable/x" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="@+id/exitButton"
        app:layout_constraintStart_toStartOf="@+id/exitButton"
        app:layout_constraintTop_toTopOf="@+id/exitButton" />

    <ImageButton
        android:id="@+id/high_scores"
        android:layout_width="174dp"
        android:layout_height="79dp"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/high_scores"
        android:cropToPadding="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@drawable/high_score" />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/high_scores"
        app:layout_constraintEnd_toEndOf="@+id/high_scores"
        app:layout_constraintStart_toStartOf="@+id/high_scores"
        app:layout_constraintTop_toTopOf="@+id/high_scores" />

</androidx.constraintlayout.widget.ConstraintLayout>