<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelect">

    <TextView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:alpha="1"
        android:background="@drawable/intro_screen"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/neki" />

    <ScrollView
        android:id="@+id/level_select"
        android:layout_width="396dp"
        android:layout_height="513dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="12dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/black"
        android:scrollbarTrackVertical="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.092">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="513dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/level_select"
            app:layout_constraintEnd_toEndOf="@+id/level_select"
            app:layout_constraintStart_toStartOf="@+id/level_select"
            app:layout_constraintTop_toTopOf="@+id/level_select">

            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level1"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="1"
                    android:background="@drawable/border_b"
                    android:text="Level 1"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level2"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:clickable="false"
                    android:text="Level 2"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level3"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:clickable="false"
                    android:text="Level 3"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level4"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:clickable="false"
                    android:text="Level 4"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level5"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:clickable="false"
                    android:text="Level 5"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="187dp"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/level6"
                    android:layout_width="187dp"
                    android:layout_height="100dp"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:clickable="false"
                    android:text="Level 6"
                    android:textColor="#000000"
                    android:textColorHighlight="#383636"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:background="@drawable/border_b"
                    android:contentDescription="@string/coverImage"
                    android:fadingEdge="horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/lock" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/completed"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="393dp"
        android:layout_height="61dp"
        android:alpha="0.4"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_select"
        app:layout_constraintVertical_bias="0.647" />

    <TextView
        android:id="@+id/textLEVELFINISH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_select"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textOF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asf"
        android:textSize="60sp"
        android:textColor="@color/beige"
        app:layout_constraintBottom_toTopOf="@+id/completed"
        app:layout_constraintEnd_toStartOf="@+id/textLEVELCOUNT"
        app:layout_constraintStart_toEndOf="@+id/textLEVELFINISH"
        app:layout_constraintTop_toBottomOf="@+id/level_select"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textLEVELCOUNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="60sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_select"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>